Fixed CSS to not have white space on bottom

--- a/app/assets/stylesheets/games.css
+++ b/app/assets/stylesheets/games.css
@@ -43,6 +43,7 @@
 
 .full_image {
 	margin-top: -40px;
+	margin-bottom: -40px;
 	margin-left: -20px;
 	position: relative;
 	background-image:url('./san_fran_streets.png');
